Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.5.0
-
None
Description
When opening a test or an example from within a Qt checkout, Qt Creator used to preselect the correct kit and deactivate shadow builds.
It seems this no longer works, the wrong kit is selected?
Attachments
For Gerrit Dashboard: QTCREATORBUG-14968 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
125034,2 | BaseQtVersion: Use canonical filepath in a few places | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |