BaseQtVersion: Use canonical filepath in a few places

I'm not sure whether this is better, but this fixes:

Change-Id: I2d7a606a59cdb25374cc75fed24ae14537eb3a55
Task-number: QTCREATORBUG-14968
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@theqtcompany.com>